--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,7 @@
-require("dotenv").config();
-module.exports =
 {
   "development": {
     "username": "postgres",
-    "password": process.env.PASSWORD || null,
+    "password": "postgres",
     "database": "anchorChart",
     "host": "127.0.0.1",
     "dialect": "postgres"
