--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/TeyonP/FullStackProject-#readme",
   "dependencies": {
+    "cli": "^1.0.1",
     "express": "^4.17.1",
     "express-es6-template-engine": "^2.2.3",
+    "heroku": "^7.59.0",
     "node": "^16.10.0",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5"
