--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/TeyonP/FullStackProject-#readme",
   "dependencies": {
     "cli": "^1.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-es6-template-engine": "^2.2.3",
     "heroku": "^7.59.0",
