updated node version

--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
   "devDependencies": {
     "nodemon": "^2.0.13",
     "sequelize-cli": "^6.2.0"
-  }
+  },
+"engines": {
+  "node": "16.8.0"
+}
+
 }
