--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-es6-template-engine": "^2.2.3",
-    "heroku": "^7.59.0",
+    "heroku": "^7.7.8",
     "node": "^16.10.0",
+    "passport": "^0.5.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5"
   },
